--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -11,7 +11,7 @@
                     <img src="/img/loading1.gif" id="notify-loader"
                          style="width: 100px;height: 73px;display: none;margin-left: 30%;"/>
                     <div class="subscribe-form" id="notify-span">
-                        <input type="email" name="email" id="email" placeholder="Enter Your Email.....">
+                        <input type="email" name="emailtonotify" id="emailtonotify" placeholder="Enter Your Email.....">
                         <button onclick="submitnotify();">Submit</button>
                     </div>
                 </div>
@@ -24,7 +24,7 @@
                 <div class="col-lg-3 col-md-5">
                     <div class="single-footer-widget">
                         <h3 class="text-white mb-26">GET IN TOUCH</h3>
-                        <span class="text-white mb-9"><i class="fa fa-phone"></i> +91 9945594954 </span>
+                        <span class="text-white mb-9"><i class="fa fa-phone"></i> +91 8848920235 </span>
                         <span class="text-white mb-9"><i class="fa fa-envelope"></i>skillsfarmindia@gmail.com</span>
                         <span class="text-white mb-9"><i class="fa fa-globe"></i>skillsfarm.in</span>
                         <span class="text-white mb-9"><i class="fa fa-map-marker"></i>Gottigere, Bangalore</span>
