--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -6,7 +6,7 @@
                 <div class="header-top-list">
                     <ul class="top-contact-list">
                         <li>
-                            <a href="">Call Us: +91 9945594954</a>
+                            <a href="">Call Us: +91 8848920235</a>
                         </li>
                         <li>
                             <a href="">Email: skillsfarmindia@gmail.com</a>
@@ -79,7 +79,15 @@
                                 <a href="/blogs">Blogs</a>
                             </li>
                             <li>
-                                <a href="{{ path('_contactus') }}">Contact Us</a>
+                                <a href="#">Our Team</a>
+                                <ul class="dropdown">
+                                    <li>
+                                        <a href="{{ path('_aboutus') }}">About Us</a>
+                                    </li>
+                                    <li>
+                                        <a href="{{ path('_contactus') }}">Contact Us</a>
+                                    </li>
+                                </ul>
                             </li>
                         </ul>
                     </nav>
