--- a/templates/home/aboutus.html.twig
+++ b/templates/home/aboutus.html.twig
@@ -10,7 +10,7 @@
                         <h2 class="text-center">About Us</h2>
                         <div class="breadcrumb-bar">
                             <ul class="breadcrumb text-center m-0">
-                             <li><a href="/">Home</a></li>
+                                <li><a href="/">Home</a></li>
                                 <li>About Us</li>
                             </ul>
                         </div>
@@ -33,18 +33,26 @@
                     <div class="abt-content" style="display: block;">
                         <h4><span>About</span> Us</h4>
                         <p><strong>Our Philosophy</strong></p>
-                        <p>At skill farm we believe that a visionary leader has a clear sense of their destination and
-                            what things they need to accomplish to reach it. We skill farmers enable the individuals to
-                            translate their positive intentions to tangible results. We make sure that every individual
-                            must learn to manage their present without losing their focus on their visionary future
-                            through their enviable career and life. We skill farmers believe that all failures in life
-                            or business, academics or in personal life are due to the lack of good leadership skills and
-                            inability to execute their full abilities when someone or any organization cannot perform at
-                            their peak or if they lack good skills and leadership, here we are to sow the seeds of
-                            skills to make everyone to reach pinnacle of success. "To be what we are, and to become what
-                            we are capable of becoming, is the only end of life". Methodology: Truly innovative and
-                            experimental by using case studies , role plays ,games , audio and video ,power point aided
-                            facilitation , questionnaire and interactive activities. </p>
+                        <p>Skills farm is design and led by a passionate team under the
+                            leadership of Mr SHYJU K R NAIR along with young and energetic minds like
+                            Mr Geo verghese, Mr Johnson Dsouza and Mr Jeffry who all have got wide and
+                            vast experience in the industry. </p>
+                        <p>
+                            <strong>Our vision and Motto and the values</strong>
+                            <br>
+                            <i>
+                                “To create a platform where every seeker is satisfied with his search for better
+                                living”.</i>
+                        </p>
+                        <p>
+                            <strong>Our core values we assure,</strong></p>
+                        <p>
+                            <span class="mark-icon block pl-27">Complete customer satisfaction</span>
+                            <span class="mark-icon block pl-27">Belive and Trust</span>
+                            <span class="mark-icon block pl-27">Loyality and Truthfulness</span>
+                            <span class="mark-icon block pl-27">Empowerment and quick results.</span>
+                        </p>
+
                     </div>
                 </div>
             </div>
@@ -56,7 +64,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-title text-center ">
-                        <h2>Team Member</h2>
+                        <h2>Team Members</h2>
                         <p>Our Support</p>
                     </div>
                 </div>
@@ -72,19 +80,7 @@
                         <div class="team-content">
                             <h5>Shyju Nair</h5>
                             <h6>CEO</h6>
-                        </div>
-                    </div>
-                </div>
-                <!-- Single Team End -->
-                <!-- Single Team Start -->
-                <div class="col-md-6 col-lg-3">
-                    <div class="single-team">
-                        <div class="team-img">
-                            <img src="/img/default.jpg" alt="jobhere">
-                        </div>
-                        <div class="team-content">
-                            <h5>JAYAN VARGHESE</h5>
-                            <h6>DIRECTOR</h6>
+                            <h6>shyjunair2018@gmail.com</h6>
                         </div>
                     </div>
                 </div>
@@ -97,7 +93,8 @@
                         </div>
                         <div class="team-content">
                             <h5>GEO VARGHESE</h5>
-                            <h6>CTO</h6>
+                            <h6>Customer service</h6>
+                            <h6>20angelgeo@gmail.com </h6>
                         </div>
                     </div>
                 </div>
@@ -110,11 +107,24 @@
                         </div>
                         <div class="team-content">
                             <h5>JAEFFRY JOSEPH</h5>
-                            <h6>Support</h6>
+                            <h6>Marketing</h6>
+                            <h6>josephjeffry2@gmail.com</h6>
                         </div>
                     </div>
                 </div>
                 <!-- Single Team End -->
+                <div class="col-md-6 col-lg-3">
+                    <div class="single-team">
+                        <div class="team-img">
+                            <img src="/img/default.jpg" alt="jobhere">
+                        </div>
+                        <div class="team-content">
+                            <h5>Johnson Jose</h5>
+                            <h6>Customer Service</h6>
+                            <h6>johnsonjose135@gmail.com</h6>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
