--- a/templates/register.html.twig
+++ b/templates/register.html.twig
@@ -1,4 +1,3 @@
-
 <div id="quickview-register">
     <div class="modal fade" id="register" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
@@ -13,15 +12,18 @@
                         <div class="area-title text-center mb-43">
                             <img src="/img/logo375.png" style="width: 300px;height: 75px;" alt="jobhere">
                         </div>
+
                         <form action="{{ path('_jobseeker_signup') }}" method="post">
+                            <h3><label style="color: black;padding-left: 29%;"><strong>Jobseeker
+                                        Registration</strong></label></h3>
                             <div class="form-box box2">
                                 <input type="text" name="firstname" placeholder="First Name" class="mb-14" required>
-                                <input type="text" name="lastname" placeholder="Last Name"  required>
+                                <input type="text" name="lastname" placeholder="Last Name" required>
                             </div>
                             <div class="form-box">
-                                <input type="email" name="email" placeholder="Email" class="mb-14"  required>
-                                <input type="text" name="login" placeholder="Username" class="mb-14"  required>
-                                <input type="password" name="pass" placeholder="Password"  required>
+                                <input type="email" name="email" placeholder="Email" class="mb-14" required>
+                                <input type="text" name="login" placeholder="Username" class="mb-14" required>
+                                <input type="password" name="pass" placeholder="Password" required>
                             </div>
                             <div class="fix ptb-30">
                             </div>
